--- a/eTicaret/index.html
+++ b/eTicaret/index.html
@@ -16,52 +16,81 @@
   <h1>
     <img src="logo.png" alt="logo" style="width:150px;">
     KAPAN ALIR
+    <button class="login" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
   </h1>
 </div>
+<div id="id01" class="modal">
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark" id="id1">
-  <a class="navbar-brand" href="#">KAPAN.com</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Telefon</a>
-        <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Cep telefonları</a>
-            <a class="dropdown-item" href="#">Telefon kılıfları</a>
-            <a class="dropdown-item" href="#">Giyilebilir teklonoji</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Bilgisayar</a>
-        <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Laptoplar</a>
-            <a class="dropdown-item" href="#">Masaüstü bilgisayarlar</a>
-            <a class="dropdown-item" href="#">Tabletler</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Bilgisayar bileşenleri</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">TV ve görüntü</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Ses ve müzik</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Aksesuar</a>
-      </li>
-    </ul>
-  </div>
-  <form class="form-inline" action="/action_page.php">
-    <input class="form-control mr-sm-2" type="text" style="width: 60%;"placeholder="Ara...">
-    <button class="btn btn-light" id="btnn" style="width: 30%;" type="submit">ARAMA</button>
+  <form class="modal-content animate" action="/action_page.php">
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+      <img src="bb.svg" alt="Avatar" class="avatar">
+    </div>
+
+    <div class="container">
+      <label for="uname"><b>Kullanıcı adı</b></label>
+      <input type="text" placeholder="Kullanıcı adınızı girin" name="uname" required>
+
+      <label for="psw"><b>Şifre</b></label>
+      <input type="password" placeholder="Şifrenizi girin" name="psw" required>
+
+      <button type="submit" style="background-color:#A52A2A"><h1>Giriş</h1></button>
+      <label>
+        <input type="checkbox" checked="checked" name="remember">  Beni hatırla
+      </label>
+    </div>
+
+    <div class="container" style="background-color:#FFFFFF">
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Kapat</button>
+      <span class="psw">Şifremi <a href="#">unuttum</a></span>
+    </div>
   </form>
-</nav><br>
+</div>
 
+<div class="sticky">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <a class="navbar-brand" href="#">KAPAN.com</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Telefon</a>
+          <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Cep telefonları</a>
+              <a class="dropdown-item" href="#">Telefon kılıfları</a>
+              <a class="dropdown-item" href="#">Giyilebilir teklonoji</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Bilgisayar</a>
+          <div class="dropdown-menu">
+              <a class="dropdown-item" href="#">Laptoplar</a>
+              <a class="dropdown-item" href="#">Masaüstü bilgisayarlar</a>
+              <a class="dropdown-item" href="#">Tabletler</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Bilgisayar bileşenleri</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">TV ve görüntü</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Ses ve müzik</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Aksesuar</a>
+        </li>
+      </ul>
+    </div>
+    <form class="form-inline" action="/action_page.php">
+      <input class="form-control mr-sm-2" type="text" style="width: 60%;"placeholder="Ara...">
+      <button class="btn btn-light" id="btnn" style="width: 30%;" type="submit">ARAMA</button>
+    </form>
+  </nav>
+</div>
 <div class="container" style="margin-top:30px">
   <div class="row">
     <div class="col-sm-3">
@@ -220,47 +249,97 @@
           </div>
         </div><!--/price-range-->
 
-        <div class="shipping text-center"><!--shipping-->
-          <img src="images/home/shipping.jpg" alt="" />
-        </div><!--/shipping-->
-
       </div>
     </div>
-    <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <div class="col-sm-9">
+      	<div class="features_items">
+          <div class="ogeler">
+              <h3>Taşınabilir bilgisayarlar(8)</h3>
+          </div>
+          <div class="col-sm-3">
+            <div class="cardA">
+              <div class="card">
+                <img src="macpro.jpg" alt="Denim Jeans" style="width:100%">
+                <h3>Macbook pro</h3>
+                <p class="price">$19.99</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="cardA">
+              <div class="card">
+                <img src="macair.jpg" alt="Denim Jeans" style="width:100%">
+                <h3>Macbook air</h3>
+                <p class="price">$19.99</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="cardA">
+              <div class="card">
+                <img src="mac.jpg" alt="Denim Jeans" style="width:100%">
+                <h3>Macbook</h3>
+                <p class="price">$19.99</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="cardA">
+              <div class="card">
+                <img src="mac.jpg" alt="Denim Jeans" style="width:100%">
+                <h3>Macbook</h3>
+                <p class="price">$19.99</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="cardA">
+              <div class="card">
+                <img src="macpro.jpg" alt="Denim Jeans" style="width:100%">
+                <h3>Macbook pro</h3>
+                <p class="price">$19.99</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="cardA">
+              <div class="card">
+                <img src="macair.jpg" alt="Denim Jeans" style="width:100%">
+                <h3>Macbook air</h3>
+                <p class="price">$19.99</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="cardA">
+              <div class="card">
+                <img src="mac.jpg" alt="Denim Jeans" style="width:100%">
+                <h3>Macbook</h3>
+                <p class="price">$19.99</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="cardA">
+              <div class="card">
+                <img src="mac.jpg" alt="Denim Jeans" style="width:100%">
+                <h3>Macbook</h3>
+                <p class="price">$19.99</p>
+                <p><button>Add to Cart</button></p>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
-  </div>
-</div>
-
-<div class="footer" style="margin-bottom:0">
+</body>
+<div class="container" style="margin-bottom:0" id="footer">
   <div class="row">
     <div class="col-sm-4">
       <h5>Kapan.com</h5>
@@ -289,5 +368,5 @@
     </div>
   </div>
 </div>
-</body>
+<script src="index.js" charset="utf-8"></script>
 </html>
