--- a/newSite/index.html
+++ b/newSite/index.html
@@ -1,89 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Cars</title>
+  <title>Bootstrap 4 Website Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>My First WebSite</h1>
+<div class="jumbotron text-center bg-danger text-white" style="margin-bottom:0">
+  <h1>My First Bootstrap 4 Page</h1>
+  <p>Resize this responsive page to see the effect!</p> 
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <a class="navbar-brand" href="#"><i class="fa fa-car"></i></a>
+  <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#">Link</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Cars</a>
+        <a class="nav-link" href="#">Link</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
+        <a class="nav-link" href="#">Link</a>
+      </li>  
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
+        <a href="/new site/mesaj.html" class="nav-link">Mesaj <span class="badge badge-danger"> 4</span></a>
+      </li> 
+      <li class="nav-item">
+        <a href="#" class="nav-link">Giriş yap <span class="badge badge-light"> <i class="fas fa-sign-in-alt"></i></span></a>
+      </li>  
     </ul>
-  </div>
+  </div>  
 </nav>
 
 <div class="container" style="margin-top:30px">
   <div class="row">
-    <div class="col-sm-4">
-      <h2>About Us</h2>
-      <h5>Photo of us:</h5>
-      <div class="fa">
-        <img src="car.jpg" alt=""  height="320" width="350">
-      </div>
+    <div class="col-md-4">
+        <div>
+            <h2>Haftanın en iyileri</h2>       
+            <table class="table table-dark table-striped">
+              <thead>
+                <tr>
+                  <th>Firstname</th>
+                  <th>Lastname</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>John</td>
+                  <td>Doe</td>
+                </tr>
+                <tr>
+                  <td>Mary</td>
+                  <td>Moe</td>
+                </tr>
+                <tr>
+                  <td>July</td>
+                  <td>Dooley</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <h2>Haftanın oyalmasının bitmesi</h2>
+          <div class="progress">
+              <div class="progress-bar bg-danger" style="width:70%">70%</div>
+            </div>
+            <br><br>
+            <h2>En iyi paylaşımlar</h2>
+            <div class="toast bg-light" data-autohide="false">
+              <div class="toast-header">
+                <strong class="mr-auto text-danger">Toast Header</strong>
+                <small class="text-muted">5 mins ago</small>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+              </div>
+              <div class="toast-body">
+                Some text inside the toast body
+              </div>
+            </div>
+            <div class="toast bg-light" data-autohide="false">
+              <div class="toast-header">
+                <strong class="mr-auto text-danger">Toast Header</strong>
+                <small class="text-muted">5 mins ago</small>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">&times;</button>
+              </div>
+              <div class="toast-body">
+                Some text inside the toast body
+              </div>
+            </div>
+      <h2>Profilim</h2>
+      <div class="fakeimg">Fake Image</div>
       <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3>Some Links</h3>
+      <h3>Çok tıklanan yazılar</h3>
       <p>Lorem ipsum dolor sit ame.</p>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
+          <a class="nav-link active bg-danger" href="#">Active</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link bg-light text-dark" href="#">Link</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link bg-light text-dark" href="#">Link</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link bg-light text-dark" href="#">Disabled</a>
         </li>
       </ul>
       <hr class="d-sm-none">
     </div>
-    <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-      <br>
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+    <div class="col-md-8">
+      <div class="media bg-light p-3">
+        <img src="download-1.jpg" class="mr-3 mt-3 rounded-circle" style="width:70px;height:70px;">
+        <div class="media-body">
+          <h4>Media Top</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <small>01.21.2019 12:21</small>
+          <div class="bg-secondary p-1 pl-5 rounded">
+            <button type="button" class="btn btn-warning ml-5">Paylaş <span class="badge badge-pill badge-light">7<i class="fas fa-cloud"></i></span></button>
+            <button type="button" class="btn btn-danger ml-5">Beğen <span class="badge badge-pill badge-light">122 <i class="fas fa-heart"></i></span></button>
+            <button type="button" class="btn btn-info ml-5">Yorumla <span class="badge badge-pill badge-light">32 <i class="fas fa-bars"></i></span></button>
+          </div>
+        </div>
+      </div>
+      <div class="media p-3">
+        <img src="download-2.jpg" class="mr-3 mt-3 rounded-circle" style="width:70px;height:70px;">
+        <div class="media-body">
+            <small>01.21.2019 12:21</small>
+          <h4>Media Top</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="bg-secondary p-1 pl-5 rounded">
+            <button type="button" class="btn btn-warning ml-5">Paylaş <span class="badge badge-pill badge-light">7<i class="fas fa-cloud"></i></span></button>
+            <button type="button" class="btn btn-danger ml-5">Beğen <span class="badge badge-pill badge-light">122 <i class="fas fa-heart"></i></span></button>
+            <button type="button" class="btn btn-info ml-5">Yorumla <span class="badge badge-pill badge-light">32 <i class="fas fa-bars"></i></span></button>
+          </div>
+        </div>
+      </div>
+      <div class="media bg-light p-3">
+        <img src="download-1.jpg" class="mr-3 mt-3 rounded-circle" style="width:70px;height:70px;">
+        <div class="media-body">
+          <h4>Media Top<span class="badge badge-pill badge-primary">Yeni</span></h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="bg-secondary p-1 pl-5 rounded">
+            <button type="button" class="btn btn-warning ml-5">Paylaş<span class="badge badge-pill badge-light">7</span></button>
+            <button type="button" class="btn btn-danger ml-5">Beğen<span class="badge badge-pill badge-light">122</span></button>
+            <button type="button" class="btn btn-info ml-5">Yorumla<span class="badge badge-pill badge-light">32</span></button>
+          </div>
+        </div>
+      </div>
+      <div class="media p-3">
+        <img src="download-3.jpg" class="mr-3 mt-3 rounded-circle" style="width:70px;height:70px;">
+        <div class="media-body">
+          <h4>Media Top</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="bg-secondary p-1 pl-5 rounded">
+            <button type="button" class="btn btn-warning ml-5">Paylaş<span class="badge badge-pill badge-light">7</span></button>
+            <button type="button" class="btn btn-danger ml-5">Beğen<span class="badge badge-pill badge-light">122</span></button>
+            <button type="button" class="btn btn-info ml-5">Yorumla<span class="badge badge-pill badge-light">32</span></button>
+          </div>
+        </div>
+      </div>
+      <div class="media bg-light p-3">
+        <img src="download-2.jpg" class="mr-3 mt-3 rounded-circle" style="width:70px;height:70px;">
+        <div class="media-body">
+          <h4>Media Top</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="bg-secondary p-1 pl-5 rounded">
+            <button type="button" class="btn btn-warning ml-5">Paylaş<span class="badge badge-pill badge-light">7</span></button>
+            <button type="button" class="btn btn-danger ml-5">Beğen<span class="badge badge-pill badge-light">122</span></button>
+            <button type="button" class="btn btn-info ml-5">Yorumla<span class="badge badge-pill badge-light">32</span></button>
+          </div>
+        </div>
+      </div>
+      <div class="media p-3" >
+        <img src="download-3.jpg" class="mr-3 mt-3 rounded-circle" style="width:70px;height:70px;">
+        <div class="media-body">
+          <h4>Media Top</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="bg-secondary p-1 pl-5 rounded">
+            <button type="button" class="btn btn-warning ml-5">Paylaş<span class="badge badge-pill badge-light">7</span></button>
+            <button type="button" class="btn btn-danger ml-5">Beğen<span class="badge badge-pill badge-light">122</span></button>
+            <button type="button" class="btn btn-info ml-5">Yorumla<span class="badge badge-pill badge-light">32</span></button>
+          </div>
+        </div>
+      </div>
+      <div class="media bg-light p-3">
+        <img src="download-3.jpg" class="mr-3 mt-3 rounded-circle" style="width:70px;height:70px;">
+        <div class="media-body">
+          <h4>Media Top</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="bg-secondary p-1 pl-5 rounded">
+            <button type="button" class="btn btn-warning ml-5">Paylaş<span class="badge badge-pill badge-light">7</span></button>
+            <button type="button" class="btn btn-danger ml-5">Beğen<span class="badge badge-pill badge-light">122</span></button>
+            <button type="button" class="btn btn-info ml-5">Yorumla<span class="badge badge-pill badge-light">32</span></button>
+          </div>
+        </div>
+      </div>
+      <div class="media p-3">
+        <img src="download-1.jpg" class="mr-3 mt-3 rounded-circle" style="width:70px;height:70px;">
+        <div class="media-body">
+          <h4>Media Top<span class="badge badge-pill badge-danger">Yüksellişte</span></h4>
+          <p>Lorem ipsum incididunt ut labore et dolore magna aliqua.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, labore et dolore magna aliqua.</p>
+          <div class="bg-secondary p-1 pl-5 rounded">
+            <button type="button" class="btn btn-warning ml-5">Paylaş<span class="badge badge-pill badge-light">7</span></button>
+            <button type="button" class="btn btn-danger ml-5">Beğen<span class="badge badge-pill badge-light">122</span></button>
+            <button type="button" class="btn btn-info ml-5">Yorumla<span class="badge badge-pill badge-light">32</span></button>
+          </div>
+        </div>
+      </div>
+      <div class="media bg-light p-3">
+        <img src="download.jpg" class="mr-3 mt-3 rounded-circle" style="width:70px;height:70px;">
+        <div class="media-body">
+          <h4>Media Top</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <div class="bg-secondary p-1 pl-5 rounded">
+            <button type="button" class="btn btn-warning ml-5">Paylaş<span class="badge badge-pill badge-light">7</span></button>
+            <button type="button" class="btn btn-danger ml-5">Beğen<span class="badge badge-pill badge-light">122</span></button>
+            <button type="button" class="btn btn-info ml-5">Yorumla<span class="badge badge-pill badge-light">32</span></button>
+          </div>
+        </div>
+      </div>
+
+      <script>
+        $(document).ready(function(){
+          $('.toast').toast('show');
+        });
+        </script>
+        <br>
+      <ul class="pagination pagination-lg justify-content-center">
+          <li class="page-item"><a class="page-link text-dark" href="#">Previous</a></li>
+          <li class="page-item"><a class="page-link text-dark" href="#">1</a></li>
+          <li class="page-item"><a class="page-link text-white bg-danger" href="#">2</a></li>
+          <li class="page-item"><a class="page-link text-dark" href="#">3</a></li>
+          <li class="page-item"><a class="page-link text-dark" href="#">Next</a></li>
+        </ul>
     </div>
   </div>
 </div>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
+<div class="jumbotron text-center bg-danger" style="margin-bottom:0">
   <p>Footer</p>
 </div>
 
